--- a/.config/i3/config
+++ b/.config/i3/config
@@ -37,3 +37,9 @@ bindsym $mod+Shift+q kill
 #bindsym $mod+d exec --no-startup-id dmenu_run -b -fn "Noto-10.5" -nb "#424242" -nf "#94A895" -sf "#424242" -sb "#94A895"
 bindsym $mod+d exec --no-startup-id $HOME/launch.sh
 bindsym $mod+d exec --no-startup-id
+
+###################
+## sound-section ##
+###################
+exec --no-startup-id pulseaudio
+bindsym $mod+Ctrl+m exec pavucontrol
