--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,7 +6,7 @@ set $mod Mod1
 set $win Mod4
 
 # Set terminal
-$term = xterm -e screen
+set $term = xterm -e screen
 #$term = urxvt -e screen
 #$term = termite -e screen
 #$term = terminology -e screen
@@ -35,7 +35,7 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_run -b -fn "Noto-10.5" -nb "#424242" -nf "#94A895" -sf "#424242" -sb "#94A895"
-bindsym $mod+d exec --no-startup-id $HOME/launch.sh
+bindsym $mod+Shift+d exec --no-startup-id $HOME/launch.sh
 bindsym $mod+d exec --no-startup-id
 
 ###################
@@ -338,6 +338,7 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-#bar {
-#        status_command i3status
-#}
+bar {
+        status_command i3status
+        #top
+}
