--- a/.config/i3/config
+++ b/.config/i3/config
@@ -89,6 +89,9 @@ bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_
 bindsym $mod+h split h
 bindsym $mod+v split v
 
+# task manager
+bindsym $win+BackSpace exec --no-startup-id sleep 3 && xfce4-power-manager
+
 # toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
@@ -203,8 +206,9 @@ mode "resize" {
 }
 
 # Autostart applications
-exec --no-startup-id nitrogen --restore;
-exec --no-startup-id emacs -fs
+exec_always --no-startup-id feh --randomize --bg-fill ~/.wallpaper/*
+exec_always --no-startup-id compton -cCGfF -o 0.38 -O 200 -I 200 -t 0 -l 0 -r 3 -D2 -m 0.88
+#exec --no-startup-id emacs -fs
 exec --no-startup-id xautolock -time 10 -locker ~/.config/i3/i3lock.sh
 exec --no-startup-id dunst
 exec --no-startup-id polybar statusbar
