--- a/.config/i3/config
+++ b/.config/i3/config
@@ -36,8 +36,10 @@ bindsym $mod+Shift+q kill
 
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_run -b -fn "Noto-10.5" -nb "#424242" -nf "#94A895" -sf "#424242" -sb "#94A895"
-bindsym $mod+Shift+d exec --no-startup-id $HOME/launch.sh
-bindsym $mod+d exec --no-startup-id
+#bindsym $mod+Shift+d exec --no-startup-id $HOME/launch.sh
+#bindsym $mod+d exec --no-startup-id rofi -show run
+bindsym $mod+d exec rofi -show run -font "Knack 11" -fullscreen True
+#bindsym $mod+d exec --no-startup-id albert
 
 ###################
 ## sound-section ##
@@ -204,6 +206,8 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
+bindsym $mod+d exec --no-startup-id
 
 # Autostart applications
 exec_always --no-startup-id feh --randomize --bg-fill ~/.wallpaper/*
